--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
-	<body>	
-		
-		<div class="btn"><p>Click me</p></div>
+    <body>  
+        
+    <div class="div-default"><p>Click me</p></div>
+    <div class="div-default"><p>Click me</p></div>
+    <div class="div-default"><p>Click me</p></div>
+    <div class="div-default"><p>Click me</p></div>
 
    <script src="scripts/javascript-toggle-class.js"></script>
+  <!-- <script src="scripts/toggle-one.js"></script> -->
    </body>
 </html>
