decided another div was needed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="div-default"><p>Click me</p></div>
     <div class="div-default"><p>Click me</p></div>
     <div class="div-default"><p>Click me</p></div>
+    <div class="div-default"><p>Click me</p></div>
 
    <script src="scripts/javascript-toggle-class.js"></script>
   <!-- <script src="scripts/toggle-one.js"></script> -->
