--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="div-default"><p>Click me</p></div>
     <div class="div-default"><p>Click me</p></div>
 
-   <script src="scripts/javascript-toggle-class.js"></script>
-  <!-- <script src="scripts/toggle-one.js"></script> -->
+   <script src="scripts/javascript-toggle.js"></script>
+   <!--<script src="scripts/javascript-toggle-one-class.js"></script>-->
    </body>
 </html>
